<resources>
    <string name="app_name">食品安全培训</string>

    <string name="txt_login_input_phone">请输入手机号</string>
    <string name="txt_login_input_pwd">请输入密码</string>
    <string name="txt_login_input_code">请输入验证码</string>
    <string name="txt_login_getcode">获取验证码</string>
    <string name="txt_login">登录</string>
    <string name="txt_forget_pwd">忘记密码</string>
    <string name="txt_stu_regist">学员注册</string>
    <string name="txt_policy"><u>我已阅读并同意《用户隐私相关政策》</u></string>
    <string name="send">%1$ds后重发</string>
    <string name="get_msg_code">重发</string>
    <string name="txt_regist_input_name">请输入姓名</string>
    <string name="txt_regist_input_sex">请输入性别</string>
    <string name="txt_document_type">证件类型</string>
    <string name="txt_document_num">请输入身份证号码</string>
    <string name="txt_input_mail">请输入邮箱</string>
    <string name="txt_input_eduction">请输入学历</string>
    <string name="txt_next">下一步</string>
    <string name="txt_regist_industry">行业类型</string>
    <string name="txt_regist_post">担任岗位</string>
    <string name="txt_input_company_name">请输入单位名称</string>
    <string name="txt_input_company_phone">请输入单位电话</string>
    <string name="txt_input_company_location">单位所在省及城市（例：江苏省南京市）</string>
    <string name="txt_input_company_detail_location">单位所在街道及详细地址</string>
    <string name="txt_regist">注册</string>
    <string name="txt_know">知道了</string>
    <string name="txt_regist_sucess">注册成功</string>
    <string name="txt_regist_sucess_content">默认登录密码为123456，登录成功后可以修改密码。</string>
    <string name="txt_manager_people">泰州市食品安全管理人员</string>
    <string name="txt_online_policy">在线培训服务平台用户隐私相关政策</string>
    <string name="txt_read_policy">我已阅读并同意此协议</string>
    <string name="txt_agree">同意</string>
    <string name="txt_not_agree">不同意</string>


    <string name="txt_title_mine">我的</string>
    <string name="txt_title_mine_order">我的订单</string>
    <string name="txt_title_mine_score">我的积分</string>
    <string name="txt_title_mine_study">我的学习</string>
    <string name="txt_title_mine_certificate">我的证书</string>
    <string name="txt_title_mine_notification">我的通知</string>
    <string name="txt_title_mine_contract">联系我们</string>
    <string name="txt_title_mine_setting">设   置</string>
    <string name="txt_system_notification">系统公告</string>
    <string name="txt_course_name">主讲：%1$s</string>
    <string name="txt_course_time">课程时长：%1$s</string>
    <string name="txt_course_time_look">已观看时长：%1$s</string>
    <string name="txt_hotline">客服热线</string>
    <string name="txt_company_page">公司主页</string>
    <string name="txt_company_location">公司地址</string>
    <string name="txt_traffic_guide">交通指南</string>
    <string name="txt_account_safety">账号与安全</string>
    <string name="txt_new_notification">新消息通知</string>
    <string name="txt_privacy">隐私</string>
    <string name="txt_custom">通用</string>
    <string name="txt_app_version">食品安全培训</string>
    <string name="txt_exit_login">退出登录</string>


    <string name="txt_choose_auth">选择实名认证方式</string>
    <string name="txt_auth_card">身份证认证</string>
    <string name="txt_auth_third">第三方认证</string>
    <string name="txt_auth_card_desc">本过程需要本人完成，\n准备好身份证~</string>
    <string name="txt_auth_third_desc">本过程需要本人完成，\n若实名即可认证~</string>
    <string name="txt_input_real_name">请输入真实姓名</string>
    <string name="txt_input_cer_type">请输入证件类型（例：身份证）</string>
    <string name="txt_auth_identity_note">注：请确认是您本人，验证后不可更改</string>
    <string name="txt_confirn_commit">确认并提交</string>
    <string name="txt_totle_auth">身份认证</string>
    <string name="txt_commit_auth_complete">您提交的认证资料已通过考核</string>
    <string name="txt_commit_auth_success">实名认证成功</string>
    <string name="txt_commit_auth">实名认证</string>
    <string name="txt_return">返回</string>
    <string name="txt_hint">提示</string>
    <string name="txt_hint_continue_edu">您好，您的在线考试尚未完成，并且在线考试分数达60分或以上，才能进行申请继续教育盖章！</string>
    <string name="txt_cancel">返回</string>
    <string name="txt_confirm">确定</string>
    <string name="txt_train_record">培训记录</string>
    <string name="txt_select_course_name">课程名称：</string>
    <string name="txt_pay_count">金额</string>
    <string name="txt_pay_order_id">订单号</string>
    <string name="txt_pay_wechat">微信支付</string>
    <string name="txt_pay_ali">支付宝支付</string>
    <string name="txt_payment">付款</string>
    <string name="txt_payment_count">应付金额：¥%1$s</string>
    <string name="txt_payment_confirm">确认支付</string>
    <string name="txt_input_document_num">请输入身份证号码</string>
    <string name="txt_input_document_name">请输入证书名称</string>
    <string name="txt_cer_detail">证书详情页</string>
    <string name="txt_cer_content_detail">点击右侧图标上传证书，\n请保持图片清晰及完整，\n避免出现照片模糊、闪光\n强烈以及光线偏暗等情况。</string>
    <string name="cancel">取消</string>
    <string name="commit">提交</string>
    <string name="txt_title_train_apply">申请面授培训认定</string>
    <string name="policy_regulation">政策法规</string>
    <string name="city_dynamic">创城动态</string>
    <string name="industry_information">行业资讯</string>
    <string name="latest_news">最新动态</string>
    <string name="score_detail">积分明细</string>
    <string name="score_rule">积分规则如下：</string>
    <string name="score_explam">积分说明</string>
    <string name="score_answer">答：</string>
    <string name="score_question">问：</string>
    <string name="exam">考试</string>
    <string name="exam_subject_count">道题</string>
    <string name="exam_subject_history">历史最高分：</string>
    <string name="training_description">一、使用说明及范围</string>
    <string name="training_operation">二、操作流程说明</string>
    <string name="training_examine">三、审核说明</string>
    <string name="training_face_title">面授培训认定说明</string>
    <string name="avatar">头像</string>
    <string name="nick_name">昵称</string>
    <string name="sex">性别</string>
    <string name="birthday">出生日期</string>
    <string name="write_not">未填写</string>
    <string name="study_num">学号</string>
    <string name="phone_num">手机号码</string>
    <string name="location">地区</string>
    <string name="work_status">工作状态</string>
    <string name="pseronal_check">个人实名认证</string>
    <string name="auth_not">未认证</string>
    <string name="qr_card">二维码名片</string>
    <string name="personal_info">个人资料</string>
    <string name="apply_continue_eduction">食品安全初次申请</string>
    <string name="txt_hint_no_apply">您还没有申请记录</string>
    <string name="training_content">培训内容</string>
    <string name="choose_org">选择机构</string>
    <string name="choose_job">选择就业</string>
    <string name="level">级别：</string>
    <string name="project_num">项目编号：</string>
    <string name="apply">申请</string>
    <string name="study">学习</string>
    <string name="food_safe_train">食品安全管理人员培训</string>
    <string name="apply_record">申请记录</string>
    <string name="training_record">培训记录</string>
    <string name="face_training_check">面授培训认定</string>
    <string name="confirm_note"><u>认定说明</u></string>
    <string name="public_class">公共课程</string>
    <string name="major_class">专业课程</string>
    <string name="video_class">视频课程</string>
    <string name="all">全部</string>
    <string name="paid">已缴费</string>
    <string name="unpaid">未缴费</string>
    <string name="topic_question">上一题</string>
    <string name="next_question">下一题</string>
    <string name="exam_answer">考试答题</string>
    <string name="study_score">学习积分</string>
    <string name="detail">详情</string>
    <string name="comments">评论(%1$s)</string>
    <string name="send_replay">发送</string>
    <string name="recover">回复：</string>


</resources>
