<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".login.LoginActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp179">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp140"
            android:background="@drawable/bg_top_img">


        </ImageView>

        <ImageView
            android:layout_width="@dimen/dp78"
            android:layout_height="@dimen/dp78"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/bg_login_icon" />

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp150"
        android:layout_marginLeft="@dimen/dp35"
        android:layout_marginRight="@dimen/dp40"
        android:layout_marginTop="@dimen/dp55"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp50"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/dp17"
                android:layout_height="@dimen/dp25"
                android:background="@drawable/bg_login_phone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp15"
                android:text="+86"
                android:textColor="@color/txt_important_black_51" />

            <View
                android:layout_width="@dimen/dp1"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dp15"
                android:layout_marginTop="@dimen/dp15"
                android:layout_marginBottom="@dimen/dp15"
                android:background="@color/txt_hint_input_gray_191" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp15"
                android:background="@null"
                android:hint="@string/txt_login_input_phone"
                android:textColorHint="@color/txt_hint_input_gray_191"
                android:textSize="@dimen/sp14" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp50"
            android:gravity="center_vertical"
            android:orientation="horizontal">


            <ImageView
                android:layout_width="@dimen/dp15"
                android:layout_height="@dimen/dp25"
                android:background="@drawable/bg_login_pwd" />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp16"
                android:background="@null"
                android:hint="@string/txt_login_input_pwd"
                android:textColorHint="@color/txt_hint_input_gray_191"
                android:textSize="@dimen/sp14" />


        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp50"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_code"
                android:layout_width="@dimen/dp21"
                android:layout_height="@dimen/dp21"
                android:layout_centerVertical="true"
                android:background="@drawable/bg_login_code" />



            <EditText
                android:layout_width="@dimen/dp122"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp11"
                android:background="@null"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/iv_code"
                android:hint="@string/txt_login_input_code"
                android:textColorHint="@color/txt_hint_input_gray_191"
                android:textSize="@dimen/sp14" />
            <TextView
                android:id="@+id/tv_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp15"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="@string/txt_login_getcode"
                android:textColor="@color/txt_important_black_51" />
            <View
                android:layout_width="@dimen/dp1"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dp15"
                android:layout_marginTop="@dimen/dp15"
                android:layout_marginBottom="@dimen/dp15"
                android:layout_toLeftOf="@+id/tv_send"
                android:background="@color/txt_hint_input_gray_191" />
        </RelativeLayout>


    </LinearLayout>



    <Button
        android:id="@+id/btn_login"
        android:layout_width="@dimen/dp305"
        android:layout_height="@dimen/dp40"
        android:text="@string/txt_login"
        android:textSize="@dimen/sp16"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/dp32"
        android:background="@drawable/bg_round_blue_btn"/>

    <RelativeLayout
        android:layout_width="@dimen/dp265"
        android:layout_height="@dimen/dp15"
        android:layout_marginTop="@dimen/dp18"
        >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_forget_pwd"
        android:textSize="@dimen/sp10"
        android:textColor="@color/txt_auxiliary_gray"
        />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_stu_regist"
            android:layout_alignParentRight="true"
            android:textSize="@dimen/sp10"
            android:textColor="@color/color_blue_btn"
            />

    </RelativeLayout>



</LinearLayout>