<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp182"
        android:layout_marginLeft="@dimen/dp47"
        android:layout_marginRight="@dimen/dp47"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_regist_sucess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp20"
            android:gravity="center"
            android:text="@string/txt_regist_sucess"
            android:textColor="@color/color_blue_btn"
            android:textSize="@dimen/sp23"
            android:textStyle="bold" />

        <View
            android:id="@+id/view_line"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_05"
            android:layout_below="@+id/tv_regist_sucess"
            android:layout_marginTop="@dimen/dp10"
            android:layout_marginRight="@dimen/dp24"
            android:layout_marginLeft="@dimen/dp24"
            android:background="@color/gray_line_e3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_regist_sucess_content"
            android:layout_below="@+id/view_line"
            android:layout_marginTop="@dimen/dp21"
            android:layout_marginLeft="@dimen/dp30"
            android:layout_marginRight="@dimen/dp30"
            android:textColor="@color/txt_important_black_51"
            />


        <TextView
            android:id="@+id/tv_confirn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp45"
            android:layout_alignParentBottom="true"
            android:background="@color/color_blue_btn"
            android:gravity="center"
            android:text="@string/txt_know"
            android:textColor="@color/white"
            android:textSize="@dimen/sp16" />

    </RelativeLayout>
</LinearLayout>