<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">




    <include layout="@layout/layout_title"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/dp10"
        android:layout_marginTop="@dimen/dp27"
        >


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp16"
            android:textColor="@color/txt_important_black_51"
            android:layout_marginLeft="@dimen/dp22"
            android:text="@string/training_description"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp1"
            android:background="@color/gray_line_e3"
            android:layout_marginTop="@dimen/dp14"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp100"></RelativeLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp16"
            android:textColor="@color/txt_important_black_51"
            android:layout_marginLeft="@dimen/dp22"
            android:text="@string/training_operation"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp1"
            android:background="@color/gray_line_e3"
            android:layout_marginTop="@dimen/dp14"
            />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp100"></RelativeLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp16"
            android:textColor="@color/txt_important_black_51"
            android:layout_marginLeft="@dimen/dp22"
            android:text="@string/training_examine"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp1"
            android:background="@color/gray_line_e3"
            android:layout_marginTop="@dimen/dp14"
            />



    </LinearLayout>










</LinearLayout>